--- a/JavaScript/Atividade-02/Questao-16/index.html
+++ b/JavaScript/Atividade-02/Questao-16/index.html
@@ -9,10 +9,11 @@
 </head>
 
 <body>
-    <input id="soma1" placeholder="Digite um número" type="text">
-    <input id="soma2" placeholder="Digite outro número" type="text">
-    <button id="btn-soma">Somar</button>
-    <label id="resultado-soma"></label>
+    <input id="entrada-primeiro-valor" placeholder="Digite um número" type="text">
+    <input id="entrada-segundo-valor" placeholder="Digite outro número" type="text">
+    <button id="botao-somar">Somar</button>
+    <label id="legenda-resultado"></label>
+
     <script src="scripts/script.js"></script>
 </body>
 
